added back arrow

--- a/new-site/havana/index.html
+++ b/new-site/havana/index.html
@@ -507,7 +507,7 @@
         <!-- NAV -->
         <div id="nav-holder">
             <div id="nav">
-                <a href="../index.html"><img src="../images/feature-logo.png" alt="Tiny Atlas Quarterly" class="crest"></a>
+                <a href="../index.html"><img src="../images/back-arrow.svg" alt="" class="back-arrow"><img src="../images/feature-logo.png" alt="Tiny Atlas Quarterly" class="crest"></a>
                 <div class="title">
                     <span class="issue">City 2O17</span><br>
                     <span class="feature">Havana</span>
