--- a/new-site/index.html
+++ b/new-site/index.html
@@ -96,7 +96,7 @@
                         <img src="images/paris-preview.jpg" alt="" class="preview" />
                         <div class="info">
                             <img src="images/paris-title.png" alt="" class="title" />
-                            <p class="text">From the buttery croissants to the hidden hammams, it’s the little things that make Paris a girl’s ultimate dream</p>
+                            <p class="text">From the buttery croissants to the hidden hammams, it’s the little things that make Paris a girl’s ultimate dream.</p>
                             <div class="meta">Girls <span>2.28.2016</span></div>
 
                         </div>
@@ -108,7 +108,7 @@
                         <img src="images//tel-aviv-feautre.jpg" alt="" class="preview" />
                         <div class="info">
                             <img src="images/tel-aviv-title.png" alt="" class="title" />
-                            <p class="text">In a Tel Avivian neighborhood destined to make you feel local, even simple gazpacho tastes bett</p>
+                            <p class="text">In a Tel Avivian neighborhood destined to make you feel local, even simple gazpacho tastes better. Levinsky finds a moment to shine.</p>
                             <div class="meta">Neighborhood <span>2.28.2016</span></div>
                         </div>
                     </a>
@@ -119,7 +119,7 @@
                         <img src="images/havana-feature.jpg" alt="" class="preview" />
                         <div class="info">
                             <img src="images/havana-title.png" alt="" class="title" />
-                            <p class="text">Unpredictable, unmanicured and pulsating with life, Havana might be trending but its’ shabby charm never really went anywhere</p>
+                            <p class="text">Unpredictable, unmanicured and pulsating with life, Havana might be trending but its’ shabby charm never really went anywhere.</p>
                             <div class="meta">Travel Log <span>2.28.2016</span></div>
                         </div>
                     </a>
@@ -211,19 +211,19 @@
             </div>
 
             <div class="issue">
-                <a href="previous-issues.html#west-coast">
+                <a href="previous-issues.html#westcoast-2016">
                   <img src="images/tiny-atlas-cover-west-coast-2016.jpg" alt="" class="lazy">
                 </a>
             </div>
 
             <div class="issue">
-                <a href="previous-issues.html#earth">
+                <a href="previous-issues.html#earth-2015">
                   <img src="images/tiny-atlas-cover-earth-2015.jpg" alt="" class="lazy">
                 </a>
             </div>
 
             <div class="issue">
-                <a href="previous-issues.html#fire">
+                <a href="previous-issues.html#fire-2015">
                   <img src="images/tiny-atlas-cover-fire-2015.jpg" alt="">
                 </a>
             </div>
