--- a/new-site/index.html
+++ b/new-site/index.html
@@ -105,7 +105,7 @@
 
                 <div class="feature-card feature-small">
                     <a href="tel-aviv/index.html">
-                        <img src="images//tel-aviv-feautre.jpg" alt="" class="preview" />
+                        <img src="images/tel-aviv-feautre.jpg" alt="" class="preview" />
                         <div class="info">
                             <img src="images/tel-aviv-title.png" alt="" class="title" />
                             <p class="text">In a Tel Avivian neighborhood destined to make you feel local, even simple gazpacho tastes better. Levinsky finds a moment to shine.</p>
