previous issues update

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -228,7 +228,7 @@
                 </a>
             </div>
             <div class="description description-bottom">
-              <p><a href="#">View all Issues</a></p>
+              <p><a href="previous-issues.html">View all Issues</a></p>
             </div>
 
           </div>
