--- a/new-site/previous-issues.html
+++ b/new-site/previous-issues.html
@@ -4,7 +4,7 @@
   <head>
 		<meta charset="UTF-8" />
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	  <title>Welcome to Tiny Atlas Quarterly | West Coast 2016</title>
+	  <title>Welcome to Tiny Atlas Quarterly | Previous Issues</title>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta name="apple-mobile-web-app-capable" content="yes" />
 	  <meta name="description" content="Tiny Atlas Quarterly is a lifestyle travel magazine filled with rich, beautiful stories that show readers how it feels to be in the places you are interested in going as well as all the information you need to get there." />
@@ -44,38 +44,33 @@
     <!-- EDITION WRAPPER -->
     <edition id="theedition">
 
-         <div class="header-container">
-           <div class="header-logo"><a href="index.html"><img src="images/TAQ-logo-white.svg" alt="" class="logo"></a></div>
-			<div class="header-links-container">
-        <span class="header-links list-triangle"><a href="events/solas/index.html">Events</a>
-          <ul>
-            <li><a href="events/solas/index.html">SOLAS</a></li>
-            <li><a href="events/tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
-            <li><a href="events/leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
-            <li><a href="events/montauk/index.html">Montauk Show</a></li>
-          </ul>
-        </span>
-        <span class="header-links"><a href="about/index.html">About</a></span>
-        <span class="header-links list-triangle"><a href="about/masthead.html">Masthead</a>
-          <ul>
-            <li><a href="about/editors-letter.html">Editor's Letter</a></li>
-          </ul>
-        </span>
-        <span class="header-links"><a href="about/stockists.html">Stockists</a></span>
-        <span class="header-links"><a href="http://shop.tinyatlasquarterly.com/collections/all" target="_blank">Shop</a></span>
+      <div class="header-container">
+          <div class="header-logo">
+              <a href="index.html"><img src="images/TAQ-logo.png" alt="" class="logo"></a>
+          </div>
+          <div class="header-links-container">
+            <!-- <span class="header-links link-active"><a href="index.html">Current Issue</a></span> -->
+            <span class="header-links list-triangle"><a href="index.html">Current Issue</a>
+             <ul>
+               <li><a href="about/editors-letter.html">Editor's Letter</a></li>
+               <li><a href="about/masthead.html">Masthead</a></li>
+             </ul>
+           </span>
+
+           <span class="header-links"><a href="about/index.html">About</a></span>
+
+          <span class="header-links list-triangle"><a href="events/solas/index.html">Events</a>
+                <ul>
+                  <li><a href="events/solas/index.html">SOLAS</a></li>
+                  <li><a href="events/tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
+                  <li><a href="events/leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
+                  <li><a href="events/montauk/index.html">Montauk Show</a></li>
+                </ul>
+              </span>
+
+              <span class="header-links"><a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders" target="_blank">Shop</a></span>
+          </div>
       </div>
-		</div>
-
-    <section id="kickstarter">
-         <img src="images/Solas-Image-black.jpg" class="fade" alt="">
-         <div>
-           <h2>Tiny Atlas SOLAS camera bag</h2>
-           <p>Bring a bag you love and bring your camera too! Visit our Backerkit page to preorder Solas, a lightweight, versatile and durable camera bag Tiny Atlas Quarterly + Alite Designs made just for you.</p>
-           <p><a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders">Preorder Now</a></p>
-         </div>
-    </section>
-
-
         <!-- START WEST COAST 2016 -->
         <section id="westcoast-2016" style="margin: 2.4em 0 0 0;">
             <!--- FEATURES --->
