added events and text changes

--- a/new-site/about/editors-letter.html
+++ b/new-site/about/editors-letter.html
@@ -60,6 +60,33 @@
     				});
 				});
         </script>
+        <!-- Facebook Pixel Code -->
+        <script>
+            ! function(f, b, e, v, n, t, s) {
+                if (f.fbq) return;
+                n = f.fbq = function() {
+                    n.callMethod ?
+                        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                };
+                if (!f._fbq) f._fbq = n;
+                n.push = n;
+                n.loaded = !0;
+                n.version = '2.0';
+                n.queue = [];
+                t = b.createElement(e);
+                t.async = !0;
+                t.src = v;
+                s = b.getElementsByTagName(e)[0];
+                s.parentNode.insertBefore(t, s)
+            }(window, document, 'script',
+                'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '1763007330608074');
+            fbq('track', 'PageView');
+        </script>
+        <noscript>
+          <img height="1" width="1" src="https://www.facebook.com/tr?id=1763007330608074&ev=PageView&noscript=1"/>
+        </noscript>
+        <!-- End Facebook Pixel Code -->
 
     </head>
 
@@ -86,7 +113,7 @@
            <li><a href="../events/montauk/index.html">Montauk Show</a></li>
           </ul>
         </span>
-        <span class="header-links"><a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders" target="_blank">Shop</a>
+        <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a>
         </span>
       </div>
   </div>
@@ -119,14 +146,17 @@
                        <!-- INTERVIW -->
                        <div id="pg-interview">
                        <div class="title-ill about-logo"><img src="images/logo-big.png" alt=""></div>
-                       <p>For our City issue, I reached out to Urban Planning Ph.d. Francisca Rojas for an introduction to the fluid, ever-changing concept of cities.</p>
-                       <p>Thank you, Emily Nathan Founder,<br /> Tiny Atlas Quarterly</p>
+                       <p>For our first City issue, I reached out to my dear friend Francisca Rojas for a casual but expert take on the fluid, ever-changing concept of cities. Francisca is a Caribbean born Chilean, raised in Washington, DC. She holds both Masters and PhD degrees in Urban Planning from Boston’s Massachusetts Institute of Technology. After years working in Santiago and back home in DC, Francisca and her family moved to Buenos Aires, where she currently works as a Housing and Urban Development Specialist. Francisca lives and breathes cities (and will happily talk to you about them any chance she gets) and I was delighted that she could lend a bit of both her personal experience and career expertise to the conversation on cities in Tiny Atlas. I hope you enjoy her note below.</p>
+                       <p>To launch this issue (and the first major shift in our website in five years!) we open with stories from a girl's Paris, a chef's Tel Aviv and a traveler’s first visit to Havana. As the coming weeks go by we will add feature stories from: Macao, Minneapolis, Honolulu, Ningbo, Dubrovnik and Zagreb, our group shows of city Portraits and city Places and our first ever crowd-sourced feature from a call for entries called #mytinyatlasLondon.</p>
+                       <p>As always, we look to hear your thoughts and see your images every day on our tag #mytinyatlas.</p>
+                       <p>Stay in touch,<br />Emily Nathan <br />Founder + Publisher<br /> Tiny Atlas Quarterly</p>
 
-                       <h2>From chaos to home</h2>
+                       <h2 class="with-ill">From Chaos to Home</h2>
                        <p>Riding on the crowded subway in Buenos Aires this week, I noticed someone's t-shirt declaring; "Istanbul: you call it chaos, I call it home." It struck me as a succinct way of expressing how, over the course of four years. my family and I have become locals in this vast metropolis of 14 million people, with the smells of buttery pastries in the morning and grilled beef in the afternoon. I was on the subway that afternoon because I needed to be in a meeting a few blocks away in a quick ten minutes. I had jumped into a taxi that immediately refused to take me to that part of town. All the streets were blocked because of massive protests. Unfazed, I saw the subway nearby, and even though I hadn't previously been on that line before, a man standing outside the station assured me that my destination was just two stops away. I made it on time. Four years ago, this same situation would have caused me great anxiety, and a very late arrival.</p>
                        <p>What is that process that transforms you from an outsider to an insider in a city? From perceiving utter chaos to seeing home? As both academic theories and personal experience would tell you, two critical aspects are involved: observing the urban landscape and listening to the people around you. As urban planners, we learned this lesson from Jane Jacobs when, in the 1960s, she resisted Robert Moses' destruction of vibrant New York City neighborhoods by evocatively describing the ‘urban ballet’ of the local community’s ties and rhythms. Urban photographers also intuitively know that their capacity for observation and personal connections is the quality that allows them to capture the spirit of a place, what the Romans called <i>genius loci.</i></p>
                        <p>In Buenos Aires, the locals advised me that the city's greatest beauty was behind closed doors -- in rooftop gardens, interior patios, alley cafés. They also advised me to always have a Plan B, C and D. These notions shifted my perception of what I initially saw as chaos, like the ubiquitous broken sidewalks, and opened my eyes to the unique patterns and dynamics that make Buenos Aires one of the most beloved cities in the world. You're home when your instincts take over and you know to see beyond the surface and when your eyes and ears are open to capturing the energy emanating from the people and the streets.</p>
                        <p>Cheers from Buenos Aires,<br /> Francisca Rojas</p>
+                       <p class="italics">Image by: Nicole Franzen</p>
                        </div>
                   </div><!--END INTERVIEW -->
                </div> <!-- END BOX -->
