--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -60,6 +60,33 @@
     				});
 				});
         </script>
+        <!-- Facebook Pixel Code -->
+        <script>
+            ! function(f, b, e, v, n, t, s) {
+                if (f.fbq) return;
+                n = f.fbq = function() {
+                    n.callMethod ?
+                        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                };
+                if (!f._fbq) f._fbq = n;
+                n.push = n;
+                n.loaded = !0;
+                n.version = '2.0';
+                n.queue = [];
+                t = b.createElement(e);
+                t.async = !0;
+                t.src = v;
+                s = b.getElementsByTagName(e)[0];
+                s.parentNode.insertBefore(t, s)
+            }(window, document, 'script',
+                'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '1763007330608074');
+            fbq('track', 'PageView');
+        </script>
+        <noscript>
+          <img height="1" width="1" src="https://www.facebook.com/tr?id=1763007330608074&ev=PageView&noscript=1"/>
+        </noscript>
+        <!-- End Facebook Pixel Code -->
 
     </head>
 
@@ -86,7 +113,7 @@
            <li><a href="../events/montauk/index.html">Montauk Show</a></li>
           </ul>
         </span>
-        <span class="header-links"><a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders" target="_blank">Shop</a>
+        <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a>
         </span>
       </div>
   </div>
@@ -118,17 +145,25 @@
                        <!-- INTERVIW -->
                        <div id="pg-interview">
                        <div class="title-ill about-logo"><img src="images/logo-big.png" alt=""></div>
-                       <p>Tiny Atlas Quarterly is a collective of talented creatives that specializes in telling rich, beautiful stories that unfold through images, art, and personal accounts of fascinating people and remarkable places.</p>
-                       <p>Tiny Atlas Creative offers travel and lifestyle photography, video and editorial story content for an array of media and marketing platforms. We can also help brands reach influencers, extend their awareness and increase engagement via our social media channels, events, and other platforms.</p>
-                       <p>Tiny Atlas Quarterly Magazine is an extension of our collaborative work as professionals, created on a very personal level. It’s where we share all the places we love to travel ourselves, as well as how we see our own backyards. Think of it as the after party, once the commercial shoot wraps and, handily, the little black book of where to go and what to do if you find yourself there one day, too.</p>
+                       <p>Tiny Atlas Quarterly magazine was founded by Emily Nathan, Jake Huffman and Liz Mullally in 2012 with Deb Hearey joining soon after. The magazine began as an extension of our collaborative work as professional photographers, designers and photo editors, but it was created on a very personal level. It’s where we shared all the places we loved to travel ourselves, as well as how we liked to see our own backyards. Today, helmed by Emily Nathan, Tiny Atlas is known for a signature visual style specializing in telling rich, beautiful stories that unfold through images, art, and personal accounts.</p>
+                       <p>Tiny Atlas Creative Services offers the highest quality travel and lifestyle content. We support brands and destinations with social media strategy and engagement and we help clients reach influencers, extend their awareness, as well as build and increase community engagement via social media, events, influencer trips and more.</p>
                        <h3>Contact</h3>
-                       <p><a href="https://www.instagram.com/tinyatlasquarterly/">Instagram @tinyatlasquarterly</a><a href="https://www.instagram.com/explore/tags/mytinyatlas/"> #mytinyatlas</a><br />
-                          <a href="https://twitter.com/TinyAtlasQtrly">twitter @tinyatlasqtrly</a></p>
-                       <p>Questions: <a href="mailto:info@tinyatlasquarterly.com?Subject=Tiny%20Atlas%20Quarterly">info@tinyatlasquarterly.com</a> <br />
-                          Press Inquries 	&amp; Ad Sales: <a href="mailto:jill@tinyatlasquarterly.com?Subject=Tiny%20Atlas%20Quarterly">
-                       Jill Hudes Lindenbaum</a><br />
-                       <a href="stockists.html">Stockists</a>
+                       <p>Instagram<br />
+                         <a href="https://www.instagram.com/tinyatlasquarterly/"> @tinyatlasquarterly</a><br />
+                         <a href="https://www.instagram.com/explore/tags/mytinyatlas/"> #mytinyatlas</a>
                        </p>
+                      <p>Twitter <br />
+                          <a href="https://twitter.com/TinyAtlasQtrly">@tinyatlasqtrly</a>
+                        </p>
+                       <p>Questions<br />
+                         <a href="mailto:info@tinyatlasquarterly.com?Subject=Tiny%20Atlas%20Quarterly">info@tinyatlasquarterly.com</a>
+                       </p>
+
+                      <p>Press Inquries 	&amp; Ad Sales: <a href="mailto:jill@tinyatlasquarterly.com?Subject=Tiny%20Atlas%20Quarterly">
+                       Jill Hudes Lindenbaum</a><br /></p>
+                       <a href="stockists.html">Stockists</a>
+
+                       <p class="italics">Image by: Emily Shur</p>
                        </div>
                   </div><!--END INTERVIEW -->
                </div> <!-- END BOX -->
