--- a/new-site/about/masthead.html
+++ b/new-site/about/masthead.html
@@ -60,6 +60,33 @@
     				});
 				});
         </script>
+        <!-- Facebook Pixel Code -->
+        <script>
+            ! function(f, b, e, v, n, t, s) {
+                if (f.fbq) return;
+                n = f.fbq = function() {
+                    n.callMethod ?
+                        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                };
+                if (!f._fbq) f._fbq = n;
+                n.push = n;
+                n.loaded = !0;
+                n.version = '2.0';
+                n.queue = [];
+                t = b.createElement(e);
+                t.async = !0;
+                t.src = v;
+                s = b.getElementsByTagName(e)[0];
+                s.parentNode.insertBefore(t, s)
+            }(window, document, 'script',
+                'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '1763007330608074');
+            fbq('track', 'PageView');
+        </script>
+        <noscript>
+          <img height="1" width="1" src="https://www.facebook.com/tr?id=1763007330608074&ev=PageView&noscript=1"/>
+        </noscript>
+        <!-- End Facebook Pixel Code -->
 
     </head>
 
@@ -87,7 +114,7 @@
           </ul>
         </span>
 
-        <span class="header-links"><a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders" target="_blank">Shop</a>
+        <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a>
         </span>
       </div>
   </div>
@@ -141,7 +168,7 @@
                        <p><a href="http://lionsandtigersco.com/">Liz Mullally</a></p>
                        <h3>PRODUCTION ASSISTANTS</h3>
                        <p>Bianca Tummings<br>
-                       Lindsey Adams<br>
+                       Lindsey Shea<br>
                        Nicole Elliott</p>
                        <h3>CITY COVER ILLUSTRATION</h3>
                        <p><a href="http://wwww.olaniepsuj.com">Ola Niepsuj</a></p>
