--- a/new-site/index.html
+++ b/new-site/index.html
@@ -40,6 +40,33 @@
 
         });
     </script>
+    <!-- Facebook Pixel Code -->
+    <script>
+        ! function(f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function() {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '1763007330608074');
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+      <img height="1" width="1" src="https://www.facebook.com/tr?id=1763007330608074&ev=PageView&noscript=1"/>
+    </noscript>
+    <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
@@ -71,7 +98,7 @@
                   </ul>
                 </span>
 
-                <span class="header-links"><a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders" target="_blank">Shop</a></span>
+                <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a></span>
             </div>
         </div>
 
@@ -85,7 +112,7 @@
                 </div>
                 <div class="description">
                     <p class="btm-padding">Tiny Atlas Quarterly is a photography-led lifestyle travel brand and social community that brings personal travel to life: in our magazine, through events and products and on immersive adventures.</p>
-                    <h3>CURRENT ISSUE - 2017 CITY</h3>
+                    <h3>CURRENT ISSUE: CITY 2017</h3>
                     <p><a href="about/editors-letter.html">Editor's Letter</a> / <a href="about/masthead.html">Masthead</a></p>
                 </div>
             </div>
@@ -97,7 +124,7 @@
                         <div class="info">
                             <img src="images/paris-title.png" alt="" class="title" />
                             <p class="text">From the buttery croissants to the hidden hammams, it’s the little things that make Paris a girl’s ultimate dream.</p>
-                            <div class="meta">Girls <span>2.28.2016</span></div>
+                            <div class="meta">Girls <span>3.10.2016</span></div>
 
                         </div>
                     </a>
@@ -109,7 +136,7 @@
                         <div class="info">
                             <img src="images/tel-aviv-title.png" alt="" class="title" />
                             <p class="text">In a Tel Avivian neighborhood destined to make you feel local, even simple gazpacho tastes better. Levinsky finds a moment to shine.</p>
-                            <div class="meta">Neighborhood <span>2.28.2016</span></div>
+                            <div class="meta">Neighborhood <span>3.10.2016</span></div>
                         </div>
                     </a>
                 </div>
@@ -120,7 +147,7 @@
                         <div class="info">
                             <img src="images/havana-title.png" alt="" class="title" />
                             <p class="text">Unpredictable, unmanicured and pulsating with life, Havana might be trending but its’ shabby charm never really went anywhere.</p>
-                            <div class="meta">Travel Log <span>2.28.2016</span></div>
+                            <div class="meta">Travel Log <span>3.10.2016</span></div>
                         </div>
                     </a>
                 </div>
@@ -175,7 +202,7 @@
               <img src="images/solas-logo.png" alt="Solas Logo" class="logo">
               <h3>A casual camera bag for  photographers</h3>
               <p>A lightweight, versatile and durable camera bag Tiny Atlas Quarterly + Alite Designs made just for you.</p>
-              <a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders"><button>Preorder</button></a>
+              <a href="https://www.alitedesigns.com/"><button>Preorder</button></a>
             </div>
           </div>
 
