--- a/new-site/events/tahiti-tofino/index.html
+++ b/new-site/events/tahiti-tofino/index.html
@@ -44,7 +44,7 @@ $(document).on("ready", function() {
 
         <div class="header-container">
             <div class="header-logo">
-                <a href="index.html"><img src="../../images/TAQ-logo.png" alt="" class="logo"></a>
+                <a href="../../index.html"><img src="../../images/TAQ-logo.png" alt="" class="logo"></a>
             </div>
             <div class="header-links-container">
               <!-- <span class="header-links link-active"><a href="index.html">Current Issue</a></span> -->
